# 53001-HW5

./: HW5.sql  README.md  pyproject.toml
hw5_python/: query1and2.py  query3.py  query4.py  query5.py  query6.py  query7.py  sakila_db.py
